--- a/ProjectDemo.OPPortal/bin/ProjectDemo.OPPortal.dll.config
+++ b/ProjectDemo.OPPortal/bin/ProjectDemo.OPPortal.dll.config
@@ -1,18 +1,25 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
-    <httpRuntime/>
+    <compilation debug="true" targetFramework="4.0" />
+    <httpRuntime />
   </system.web>
   <connectionStrings>
-    <add connectionString="Data Source=.;Initial Catalog=ProjectDemo;Persist Security Info=True;User ID=sa;Password=no080740" name="ConnectionString"/>
+    <add connectionString="Data Source=.;Initial Catalog=ProjectDemo;Persist Security Info=True;User ID=sa;Password=no080740" name="ConnectionString" />
   </connectionStrings>
   <appSettings>
     <!--是否加密数据库连接串-->
     <add key="ConStringEncrypt" value="false" />
   </appSettings>
+    <system.webServer>
+        <defaultDocument>
+            <files>
+                <add value="Index.aspx" />
+            </files>
+        </defaultDocument>
+    </system.webServer>
 </configuration>
